<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Epsilon</string>
    <string name="opened_at">Ouvert le: </string>
    <string name="account_list">Comptes</string>
    <string name="account_list_subtitle">Liste des comptes enregistrés</string>
    <string name="scheduled_list">Echéances</string>
    <string name="scheduled_list_subtitle">Liste des opérations futures</string>
    <string name="budget_list">Budgets</string>
    <string name="budget_list_subtitle">Liste des budgets actifs</string>
    <string name="authenticate">Authentification</string>
    <string name="server">Serveur</string>
    <string name="server_hint">Serveur web de l\'application hébergée</string>
    <string name="login">Login</string>
    <string name="login_hint">Votre login Epsilon</string>
    <string name="password">Mot de passe</string>
    <string name="password_hint">Votre mot de passe Epsilon</string>
    <string name="auth_hint">Identifiez vous sur Epsilon. Attention ! l\'authentification ne peut fonctionner uniquement que si vous avez activé la fonctionnalité MOBILE sur l\'application hébergée.</string>
    <string name="action_ok">OK</string>
    <string name="current_amount">Montant actuel</string>
    <string name="category">Catégorie</string>
    <string name="tiers">Tiers</string>
    <string name="amount">Montant</string>
    <string name="category_hint">Quelle est la catégorie ?</string>
    <string name="tiers_hint">Qui est concerné ?</string>
    <string name="amount_hint">Montant de l\'opération</string>
    <string name="add_depense">Ajouter une dépense</string>
    <string name="add_revenue">Faire un dépôt</string>
    <string name="add_virement">Faire un virement</string>
    <string name="add_operation_hint">Saisissez votre opération. Les champs sont tous obligatoires. La catégorie et/ou le tiers seront créés automatiquement si nécessaire.</string>
    <string name="add_virement_hint">Saisissez votre opération. Les champs sont tous obligatoires. La catégorie sera créée automatiquement si nécessaire.</string>
    <string name="operation_added">Opération ajoutée.</string>
    <string name="account_minus">Depuis le compte (débit)</string>
    <string name="account_plus">Vers le compte (crédit)</string>
    <string name="save">Enregistrer</string>
    <string name="delete">Effacer</string>
    <string name="edit_operation">Edition de l\'opération :</string>
    <string name="suppress_operation">Suppression de l\'opération :</string>
    <string name="authentification">Authentification</string>
    <string name="operation_contentDescription">+ or -</string>
    <string name="budget_used_amount">Actuellement utilisé</string>
    <string name="future_spent">Echéances prévues</string>
    <string name="future_revenue">Revenus acquis</string>
    <string name="future_spent_threshold">Total dépenses / mois</string>
    <string name="future_saving">Potentiel épargne</string>
    <string name="set_account_default">Compte par défaut</string>
    <string name="account_set_default">Le compte a été modifié : </string>
    <string name="operation_location">Localisation opération</string>
    <string name="scheduled_isautomatic">Is automatic ?</string>
    <string name="wish_list">Liste des souhaits d\'achat</string>
    <string name="wish_list_subtitle">Ce que vous désirez acheter</string>
    <string name="add_wish_hint">Saisissez les informations concernant votre nouveau souhait d\'achat. N\'oubliez pas de prendre une photo pour illustrer votre objet !</string>
    <string name="name">Nom</string>
    <string name="wish_name_hint">Le nom de l\'objet désiré</string>
    <string name="price">Prix</string>
    <string name="wish_price_hint">Le prix de l\'objet désiré</string>
    <string name="wish_account">Sur le compte</string>
    <string name="add_wish_title">Ajouter un souhait d\'achat</string>
    <string name="add_whish_subtitle">Enregistrer ses envies pour plus tard</string>
    <string name="ws_add_wish">/wishes</string>
    <string name="wish_added">Souhait d\'achat ajouté</string>
    <string name="prevision_date">Date prévue d\'achat</string>
    <string name="menu">Menu</string>
    <string name="see_scheduleds">Voir les échéances</string>
    <string name="see_budgets">Liste des budgets</string>
    <string name="see_wishes">Souhaits d\'achat</string>
    <string name="see_categories">Liste des catégories</string>
    <string name="see_tiers">Liste des tiers</string>
    <string name="category_list">Catégories</string>
    <string name="category_list_subtitle">Liste des catégories du système</string>
    <string name="tiers_list">Tiers</string>
    <string name="tiers_list_subtitle">Liste des tiers du système</string>
    <string name="search_hint">Recherche</string>
    <string name="no_month_operations">Pas d\'opérations pour le mois en cours</string>
    <string name="year_operations">Graphique des opérations sur l\'année</string>
    <string name="month_operations">Liste des opérations pour le mois en cours</string>
    <string name="minimal_amount">Seuil bas</string>
    <array name="navigation_menus">
        <item>@string/see_scheduleds</item>
        <item>@string/see_budgets</item>
        <item>@string/see_wishes</item>
        <item>@string/see_categories</item>
        <item>@string/see_tiers</item>
    </array>
</resources>
