<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuAuth"
        android:enabled="true"
        android:icon="@drawable/auth"
        android:title="@string/authentification"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuScheduled"
        android:enabled="true"
        android:icon="@drawable/next"
        android:title="@string/see_scheduleds" />

    <item
        android:id="@+id/menuBudgets"
        android:enabled="true"
        android:icon="@drawable/registre"
        android:title="@string/see_budgets" />

    <item
        android:id="@+id/menuWishes"
        android:enabled="true"
        android:icon="@drawable/registre"
        android:title="@string/see_wishes" />

</menu>
